Changing to linked list

--- a/wsng.conf
+++ b/wsng.conf
@@ -2,3 +2,8 @@
 # web server configuration file for garocena
 	port 10702
 	server_root /home/courses/g/a/garocena/public_html/wsng
+    type html text/html
+    type jpg image/jpeg
+    type jpeg image/jpeg 
+    type gif image/gif 
+    
