Think 2 works correctly with linked list

--- a/wsng.conf
+++ b/wsng.conf
@@ -5,5 +5,6 @@
     type html text/html
     type jpg image/jpeg
     type jpeg image/jpeg 
-    type gif image/gif 
+    type gif image/gif
+    type DEFAULT text/plain 
     
